@@ -546,3 +546,7 @@
 2010-05-02
 	Version 2.3.1 Released
 
+2010-05-02
+	* phregs.c: phregs_can_rename: avoid loop to count busy registers.
+	* processor.c: detailed report with occupancy stats using -report:pipeline.
+
